import java.util.*;

public class Message {

    String sender;
    String type;
    Date date;

}
